Bug 507145 - Not possible to reopen closed accounts or view ledger transactions for them
Summary: Not possible to reopen closed accounts or view ledger transactions for them
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Manjaro Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-17 07:35 UTC by sigma343
Modified: 2025-07-18 16:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sigma343 2025-07-17 07:35:03 UTC
SUMMARY
It is not possible to reopen closed accounts or view ledger transactions for them

STEPS TO REPRODUCE
1. Go to institutions menu
2. Try right click a closed account or double click

OBSERVED RESULT
Double clicking the closed account does not open the ledger for it
Right clicking it does not allow you to reopen it

EXPECTED RESULT
When double clicking a closed account the ledger for it should be displayed
Right clicking a closed account should show the actions menu which amongst other thing allows you to reopen it

Due to this I am too scared to close any other accounts due to the fear of not being able to access them or reopen them. 

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.3.6
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Comment 1 Thomas Baumgart 2025-07-17 09:13:36 UTC
Workaround: 

1. Go to accounts view
2. Right click on closed account
3. Use "Reopen account..." or
    Use "Double click" to open ledger for that account
Comment 2 Thomas Baumgart 2025-07-18 14:07:45 UTC
Git commit 4c400a349334307567511325325cc205b8fdc2c6 by Thomas Baumgart.
Committed on 18/07/2025 at 08:53.
Pushed by tbaumgart into branch 'master'.

Allow to open context menu on closed accounts in institution view
FIXED-IN: 5.2.1

M  +1    -0    kmymoney/views/kinstitutionsview.cpp

https://invent.kde.org/office/kmymoney/-/commit/4c400a349334307567511325325cc205b8fdc2c6
Comment 3 Thomas Baumgart 2025-07-18 16:18:02 UTC
Git commit f786f1332df5e0e6092370146ef26624d49305f4 by Thomas Baumgart.
Committed on 18/07/2025 at 08:54.
Pushed by tbaumgart into branch '5.2'.

Allow to open context menu on closed accounts in institution view
FIXED-IN: 5.2.1
(cherry picked from commit 4c400a349334307567511325325cc205b8fdc2c6)

M  +1    -0    kmymoney/views/kinstitutionsview.cpp

https://invent.kde.org/office/kmymoney/-/commit/f786f1332df5e0e6092370146ef26624d49305f4