Allow to open context menu on closed accounts in institution view

BUG: 507145
FIXED-IN: 5.2.1